--- a/style.css
+++ b/style.css
@@ -411,3 +411,34 @@ div{
 .navbar-inverse .navbar-collapse{
 	border: none;
 }
+.section-heading{
+	text-align: center;
+}
+.card{
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	-webkit-transition: 0.3s;
+	transition: 0.3s;
+	cursor: pointer;
+	padding:10px 10px 10px 20px;
+	margin-top: 30px;
+	border-top: 40px solid rgba(255, 255, 0, 0.63);
+
+}
+.card2{
+	border-top-color: rgba(0, 164, 255, 0.49);
+}
+.card3{
+	border-top-color: rgba(255, 67, 0, 0.75);
+
+}
+.parallex-effect{
+	background-image: url("img/parallex.jpg");
+	height: 400px;
+	background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.why-us{
+	padding-bottom: 50px; 
+}
